@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=forking
-ExecStart=/usr/sbin/ipmidetectd
+ExecStart=@X_SBINDIR@/ipmidetectd
 
 [Install]
 WantedBy=multi-user.target
