@@ -4,14 +4,14 @@ Documentation=man:bmc-device
 RefuseManualStart=true
 DefaultDependencies=no
 Before=shutdown.target
-ConditionFileIsExecutable=/usr/sbin/bmc-device
+ConditionFileIsExecutable=@X_SBINDIR@/bmc-device
 
 [Service]
 Type=oneshot
 # IPMI v2.0 rev 1.1 Table 42-3.
 #    OS Stop / Shutdown: 0x20; "OS Graceful Shutdown": 0x03
 Environment="STOP_EVENT=0x41 0x04 0x20 0x01 0x6f assertion 0x03 0x00 0x00"
-ExecStart=/usr/sbin/bmc-device --platform-event=${STOP_EVENT}
+ExecStart=@X_SBINDIR@/bmc-device --platform-event=${STOP_EVENT}
 
 [Install]
 WantedBy=shutdown.target
