@@ -2,16 +2,16 @@
 Description=Set System information in BMC
 Documentation=man:bmc-device
 
-ConditionFileIsExecutable=/usr/sbin/bmc-device
-ConditionFileNotEmpty=/etc/os-release
+ConditionFileIsExecutable=@X_SBINDIR@/bmc-device
+ConditionFileNotEmpty=@X_SYSCONFDIR@/os-release
 
 [Service]
 Type=oneshot
-EnvironmentFile=/etc/os-release
-ExecStart=/usr/sbin/bmc-device --set-operating-system-name=${NAME}
-ExecStart=/usr/sbin/bmc-device --set-primary-operating-system-name=${NAME}
-ExecStart=/usr/sbin/bmc-device --set-present-os-version-number=${VERSION}
-ExecStart=/usr/sbin/bmc-device --set-system-name=%H
+EnvironmentFile=@X_SYSCONFDIR@/os-release
+ExecStart=@X_SBINDIR@/bmc-device --set-operating-system-name=${NAME}
+ExecStart=@X_SBINDIR@/bmc-device --set-primary-operating-system-name=${NAME}
+ExecStart=@X_SBINDIR@/bmc-device --set-present-os-version-number=${VERSION}
+ExecStart=@X_SBINDIR@/bmc-device --set-system-name=%H
 
 [Install]
 WantedBy=basic.target
